fix(#36): Fix offcanvas layout to be clickable also on small screens
Add more space to buttons in offcanvas navigation

--- a/resources/css/theme-ssrq.css
+++ b/resources/css/theme-ssrq.css
@@ -168,7 +168,12 @@ ul.control-list {
 }
 
 .drawer-menu li {
-    padding: 0;
+    padding: .8rem 0;
+}
+@media screen and (min-width: 769px) {
+    .drawer-menu li {
+        padding: 1rem 0;
+    }
 }
 
 .drawer-menu li a {
